# normy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LINGUISTIC_POLICY.md  PIPELINE_GUIDELINES.md  PIPELINE_ORDER.md  README.md  STAGE_TESTING_DOCTRINE.md  linguistic_policy.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benches/: casefold_variants_bench.rs  check_bench.rs  comparison_accent_lowercase_bench.rs  comparison_bench.rs  comparison_bert_pipeline_bench.rs  comparison_data_structs.rs  comparison_fusing_bench.rs  comparison_normalization_bench.rs  comparison_pipeline_bench.rs  comparison_tokenizers_bench.rs  lang_agnostic_bench.rs  lang_aware_bench.rs  lang_bench.rs  lang_entry_ops.rs  lang_entry_ops_bench.rs  normy_bench.rs  old_vs_new.rs  process_bench.rs  stage_bench.rs  transliterate_variants_bench.rs  whitespace_bench.rs
examples/: custom_dynamic_pipeline.rs  custom_pipeline.rs  custom_profile.rs  custom_static_pipeline.rs  dynamic_profile.rs  lang_aware_pipeline.rs  preset_profiles.rs  reusable_dynamic_pipeline.rs  reusable_pipeline.rs  search_profile.rs  simple.rs  static_profile.rs  web_scrapping.rs
examples/corpus/html/wikipedia/: rust.html
normy-lang-macros/: Cargo.toml
normy-lang-macros/src/: lib.rs  proc_data.rs
src/: context.rs  fused_process.rs  lang.rs  lib.rs  main.rs  normy.rs  pipeline.rs  process.rs  process_fused.rs  profile.rs  stage.rs  static_fused_process.rs  testing.rs  unicode.rs
src/lang/: behaviour.rs  data.rs  entry.rs
src/profile/: preset.rs
src/stage/: case_fold.rs  cjk_unigram.rs  fold_case.rs  lower_case.rs  normalization.rs  normalize_punctuation.rs  normalize_whitespace.rs  remove_control_chars.rs  remove_diacritics.rs  remove_format_controls.rs  replace_fullwidth.rs  segment_word.rs  segment_words.rs  strip_control_chars.rs  strip_format_controls.rs  strip_html.rs  strip_markdown.rs  sw.rs  transliterate.rs  trim.rs  trim_whitespace.rs  unify_width.rs  unigram_cjk.rs  utf8_validate.rs  validation.rs
src/testing/: stage_contract.rs
src/tests/: integration.rs  proptest.rs  unit.rs
