[workspace]
members = [
    ".",                 # Assumes your main `normy` crate is in the root directory
    "normy-lang-macros",
]

[package]
name = "normy"
version = "0.1.0"
edition = "2024"

[dependencies]
# 💡 NEW: Dependency on the procedural macro crate
normy-lang-macros = { path = "./normy-lang-macros" }
thiserror = "2.0.17"
rand = "0.9.2"
memchr = "2.7.6"
html-escape = "0.2.13"
paste = "1.0.15"
phf = { version = "0.13.1", features = ["macros"] }
pulldown-cmark = { version = "0.13", default-features = false }
unicode-normalization = "0.1.25"
simdutf8 = { version = "0.1.5", optional = true }
smallvec = "1.15.1"
icu_normalizer = { version = "2.1.1", default-features = false, features = [
    "compiled_data",
] }

[dev-dependencies]
lazy_static = "1.5.0"
proptest = "1.9.0"
criterion = { version = "0.7.0", features = ["html_reports", "plotters"] }
unidecode = "0.3.0"
tokenizers = "0.22.2"
regex = "1.12.2"

[[bench]]
name = "nb"
path = "benches/normy_bench.rs"
harness = false

[[bench]]
name = "sb"
path = "benches/stage_bench.rs"
harness = false

[[bench]]
name = "cnb"
path = "benches/comparison_normalization_bench.rs"
harness = false

[[bench]]
name = "cbpb"
path = "benches/comparison_bert_pipeline_bench.rs"
harness = false

[[bench]]
name = "calb"
path = "benches/comparison_accent_lowercase_bench.rs"
harness = false

[[bench]]
name = "lb"
path = "benches/lang_bench.rs"
harness = false

[[bench]]
name = "wb"
path = "benches/whitespace_bench.rs"
harness = false

[features]
default = ["simd"]
simd = ["simdutf8"]
ascii-fast = []

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "s"   # or "z" if binary size matters more than last 3%
