[package]
name = "normy"
version = "0.1.1"
edition = "2024"

# ── CRATE METADATA ───────────────────────────────────────────────────────────────
authors = ["Okay Aslan <https://github.com/okayasl>"]
description = "Ultra-fast, zero-copy text normalization for Rust NLP pipelines & tokenizers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/okayasl/normy"
readme = "README.md"
homepage = "https://github.com/okayasl/normy"
documentation = "https://docs.rs/normy"
keywords = ["normalization", "llm", "nlp", "zero-copy", "tokenizer"]
categories = ["text-processing", "internationalization"]
exclude = [
    "target",
    "Cargo.lock",
    "benches/*",
    "examples/*",
    ".github/*",
    "*.md",
] # Keep .crate small (<10MB)

[dependencies]
thiserror = "2.0.17"
rand = "0.9.2"
memchr = "2.7.6"
html-escape = "0.2.13"
paste = "1.0.15"
phf = { version = "0.13.1", features = ["macros"] }
pulldown-cmark = { version = "0.13", default-features = false }
simdutf8 = { version = "0.1.5", optional = true }
smallvec = "1.15.1"
icu_normalizer = { version = "2.1.1", default-features = false, features = [
    "compiled_data",
] }

[dev-dependencies]
unicode-normalization = "0.1.25"
lazy_static = "1.5.0"
proptest = "1.9.0"
criterion = { version = "0.7.0", features = ["html_reports", "plotters"] }
unidecode = "0.3.0"
tokenizers = "0.22.2"
regex = "1.12.2"

[[bench]]
name = "cfb"
path = "benches/comparison_fusing_bench.rs"
harness = false

[[bench]]
name = "cnb"
path = "benches/comparison_normalization_bench.rs"
harness = false

[[bench]]
name = "ctb"
path = "benches/comparison_tokenizers_bench.rs"
harness = false

[[bench]]
name = "lagb"
path = "benches/lang_agnostic_bench.rs"
harness = false

[[bench]]
name = "lab"
path = "benches/lang_aware_bench.rs"
harness = false

[[bench]]
name = "leob"
path = "benches/lang_entry_ops_bench.rs"
harness = false

[profile.release]
lto = "fat"       # ← "fat" > "true" for better cross-crate opts
codegen-units = 1
opt-level = "s"   # or "z" if you want even smaller binaries
panic = "abort"
debug = false
strip = true      # ← Strips debug symbols → smaller binary

# ── BADGES ────────────────────────────────────────────────────────────
[badges]
github-actions = { repository = "okayasl/normy", workflow = "CI" }
